zokrates_cli/examples/compile_errors/generics/struct_generic_mismatch.zok
struct A<N> {
    field[N] a;
}

def main(A<1> a, A<2> b) -> bool {
    return a == b;
}
